--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Prueba de Gits</title>
+    <title>Prueba de Git</title>
 </head>
 <body>
-    <h1>Titulo</h1>
-    <p>Aqui va el contenido del parrafo</p>
+    <div id="container">
+        <div id="post">
+            <h1>Este es el título atractivo e interesante del post</h1>
+            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+        </div>
+    </div>
 </body>
 </html>
